[workspace]
resolver = "2"
members = [
    "crates/langgraph-checkpoint",
    "crates/langgraph-checkpoint-postgres",
    "crates/langgraph-checkpoint-sqlite",
    "crates/langgraph",
    "crates/langgraph-derive",
    "crates/langgraph-prebuilt",
    "crates/langgraph-providers",
    "crates/langgraph-tracing",
]

[workspace.lints.rust]
unused = "allow"
unused_imports = "allow"

[package]
name = "langgraph-rust"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7"] }
sqlx = { version = "0.8", default-features = false }

[dependencies]
langgraph = { path = "crates/langgraph" }
langgraph-prebuilt = { path = "crates/langgraph-prebuilt" }
langgraph-checkpoint = { path = "crates/langgraph-checkpoint" }
langgraph-checkpoint-sqlite = { path = "crates/langgraph-checkpoint-sqlite" }
langgraph-derive = { path = "crates/langgraph-derive" }
langgraph-providers = { path = "crates/langgraph-providers" }
langgraph-tracing = { path = "crates/langgraph-tracing" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
dotenvy = "0.15.7"
uuid = { workspace = true }
