[workspace]
resolver = "2"
members = [
    "crates/langgraph-checkpoint",
    "crates/langgraph-checkpoint-postgres",
    "crates/langgraph-checkpoint-sqlite",
    "crates/langgraph",
    "crates/langgraph-derive",
    "crates/langgraph-prebuilt",
    "crates/langgraph-providers",
    "crates/langgraph-tracing",
]

[workspace.lints.rust]
unused = "allow"
unused_imports = "allow"

[package]
name = "langgraph-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A Rust implementation of LangGraph for building stateful, multi-actor applications with LLMs (Full suite)"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/Onelevenvy/langgraph-rust"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7"] }
sqlx = { version = "0.8", default-features = false }

langgraph = { path = "crates/langgraph", version = "0.1.0" }
langgraph-prebuilt = { path = "crates/langgraph-prebuilt", version = "0.1.0" }
langgraph-checkpoint = { path = "crates/langgraph-checkpoint", version = "0.1.0" }
langgraph-checkpoint-sqlite = { path = "crates/langgraph-checkpoint-sqlite", version = "0.1.0" }
langgraph-checkpoint-postgres = { path = "crates/langgraph-checkpoint-postgres", version = "0.1.0" }
langgraph-derive = { path = "crates/langgraph-derive", version = "0.1.0" }
langgraph-providers = { path = "crates/langgraph-providers", version = "0.1.0" }
langgraph-tracing = { path = "crates/langgraph-tracing", version = "0.1.0" }

[dependencies]
langgraph = { workspace = true }
langgraph-prebuilt = { workspace = true }
langgraph-checkpoint = { workspace = true }
langgraph-checkpoint-sqlite = { workspace = true }
langgraph-derive = { workspace = true }
langgraph-providers = { workspace = true }
langgraph-tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
dotenvy = "0.15.7"
uuid = { workspace = true }
