[workspace]
resolver = "2"
members = [
    "crates/langgraph-checkpoint",
    "crates/langgraph-checkpoint-postgres",
    "crates/langgraph-checkpoint-sqlite",
    "crates/langgraph-core",
    "crates/langgraph-derive",
    "crates/langgraph-prebuilt",
    "crates/langgraph-providers",
    "crates/langgraph-tracing",
]

[workspace.lints.rust]
unused = "allow"
unused_imports = "allow"

[package]
name = "langgraph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A Rust implementation of LangGraph for building stateful, multi-actor applications with LLMs (Full suite)"

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/Onelevenvy/langgraph-rust"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7"] }
sqlx = { version = "0.8", default-features = false }

langgraph-core-rs = { path = "crates/langgraph-core", version = "0.2.1" }
langgraph = { package = "langgraph-core-rs", path = "crates/langgraph-core", version = "0.2.1" }
langgraph-prebuilt = { path = "crates/langgraph-prebuilt", version = "0.2.1" }
langgraph_checkpoint = { package = "langgraph-checkpoint-rs", path = "crates/langgraph-checkpoint", version = "0.2.1" }
langgraph_checkpoint_sqlite = { package = "langgraph-checkpoint-sqlite-rs", path = "crates/langgraph-checkpoint-sqlite", version = "0.2.1" }
langgraph_checkpoint_postgres = { package = "langgraph-checkpoint-postgres-rs", path = "crates/langgraph-checkpoint-postgres", version = "0.2.1" }
langgraph-derive = { path = "crates/langgraph-derive", version = "0.2.1" }
langgraph-providers = { path = "crates/langgraph-providers", version = "0.2.1" }
langgraph-tracing = { path = "crates/langgraph-tracing", version = "0.2.1" }

[dependencies]
langgraph-core-rs = { workspace = true }
langgraph_checkpoint = { workspace = true }
langgraph-derive = { workspace = true }
langgraph-prebuilt = { workspace = true, optional = true }
langgraph_checkpoint_sqlite = { workspace = true, optional = true }
langgraph_checkpoint_postgres = { workspace = true, optional = true }
langgraph-providers = { workspace = true, optional = true }
langgraph-tracing = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
dotenvy = "0.15.7"
uuid = { workspace = true }

[dev-dependencies]
langgraph-prebuilt = { workspace = true }
langgraph-providers = { workspace = true }
langgraph_checkpoint_sqlite = { workspace = true }
langgraph_checkpoint_postgres = { workspace = true }
langgraph-tracing = { workspace = true }

[features]
default = []
full = ["prebuilt", "providers", "tracing", "sqlite", "postgres"]
prebuilt = ["dep:langgraph-prebuilt"]
providers = ["dep:langgraph-providers"]
tracing = ["dep:langgraph-tracing"]
sqlite = ["dep:langgraph_checkpoint_sqlite"]
postgres = ["dep:langgraph_checkpoint_postgres"]

