[package]
name = "langgraph-checkpoint-sqlite-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite checkpointer implementation for LangGraph applications in Rust"

[lints]
workspace = true

[dependencies]
langgraph_checkpoint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "json"] }

[dev-dependencies]
tokio = { workspace = true }
