[package]
name = "langgraph-core-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine for LangGraph in Rust (StateGraph, Pregel, Channels, Streaming)"

[lints]
workspace = true

[dependencies]
langgraph_checkpoint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = "0.12"
