[package]
name = "langgraph-prebuilt"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
langgraph = { path = "../langgraph" }
langgraph-checkpoint = { path = "../langgraph-checkpoint" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3"
tokio = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"
