[package]
name = "langgraph-prebuilt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Prebuilt agents, layouts and tools for LangGraph applications in Rust"

[lints]
workspace = true

[dependencies]
langgraph = { workspace = true }
langgraph_checkpoint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3"
tokio = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"
