[package]
name = "langgraph-providers"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
langgraph = { path = "../langgraph" }
langgraph-prebuilt = { path = "../langgraph-prebuilt" }
langgraph-checkpoint = { path = "../langgraph-checkpoint" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3"
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = "0.3"
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
