[package]
name = "langgraph-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM providers integration (OpenAI, Anthropic, etc.) for LangGraph applications in Rust"

[lints]
workspace = true

[dependencies]
langgraph = { workspace = true }
langgraph-prebuilt = { workspace = true }
langgraph-checkpoint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3"
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = "0.3"
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

[features]
default = ["openai", "anthropic"]
openai = []
anthropic = []

