[package]
name = "langgraph-tracing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightweight LLM tracing and observability for LangGraph applications"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures = "0.3"
tokio-stream = { workspace = true }
async-stream = "0.3"

# Integration with langgraph traits
langgraph = { workspace = true }
langgraph-checkpoint = { workspace = true }
langgraph-prebuilt = { workspace = true }
