[package]
name = "langgraph"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
langgraph-checkpoint = { path = "../langgraph-checkpoint" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = "0.12"
