[package]
name = "langgraph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A Rust implementation of LangGraph for building stateful, multi-actor applications with LLMs"

[lints]
workspace = true

[dependencies]
langgraph-checkpoint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = "0.12"
